--- a/www/sites/all/modules/views_calc/CHANGELOG.txt
+++ b/www/sites/all/modules/views_calc/CHANGELOG.txt
@@ -4,6 +4,13 @@ Views Calc Module 7.x
 Version 7.x-1.x-dev
 ===================
 
+- Issue #1548552, Make sure a row_index always exists.
+- Issue #1627660, Make sure that a groupby is added when the aggregation views are created.
+- Make sure that Views Calc uses the current display.
+
+Version 7.x-1.0
+===================
+
 - Set Views Calc fields menu item so it shows up under 'Structure'.
 - Code cleanup, remove commented-out code.
 - Remove 'Hide empty column' option from Views Calc table settings. We need the query and all sub-queries to have the same number of columns.
